# vcable

./: Cargo.toml  LICENSE  README.md
crates/vcable-core/: Cargo.toml
crates/vcable-core/src/: graph.rs  lib.rs  matrix.rs  ring.rs
crates/vcable-coreaudio/: Cargo.toml
crates/vcable-coreaudio/src/: lib.rs  pcm.rs  platform.rs
crates/vcable-coreaudio/tests/: pcm_loopback.rs
crates/vcable-protocol/: Cargo.toml
crates/vcable-protocol/src/: lib.rs
crates/vcablectl/: Cargo.toml
crates/vcablectl/src/: main.rs
crates/vcabled/: Cargo.toml
crates/vcabled/src/: main.rs
native/VCableDriver/: Info.plist  VCableDriver.cpp
native/VCableDriver/VCableDriver.xcodeproj/: project.pbxproj
native/VCableDriver/VCableDriver.xcodeproj/xcshareddata/xcschemes/: VCableDriver.xcscheme  VCableDriverTests.xcscheme
native/VCableDriverTests/: VCableDriverTests.cpp
scripts/: check.sh  install-driver.sh  uninstall-driver.sh
