[workspace]
members = [
    "crates/vcable-core",
    "crates/vcable-protocol",
    "crates/vcable-coreaudio",
    "crates/vcabled",
    "crates/vcablectl",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = "warn"
